--- a/agence-immo/styles/styles.css
+++ b/agence-immo/styles/styles.css
@@ -3,7 +3,6 @@ html {
   scroll-behavior: smooth;
   padding: 0;
   margin: 0;
-  font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -11,6 +10,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Roboto', sans-serif;
+  font-weight: 300;
 }
 
 header {
@@ -56,6 +56,7 @@ header {
 .first-hed h1 {
   margin: 0;
   padding: 0;
+  font-weight: 400;
 }
 
 .second-hed {
@@ -78,6 +79,7 @@ header {
 .second-hed h2 {
   margin: 0;
   padding: 0;
+  font-weight: 400;
 }
 
 .third-hed {
