--- a/agence-immo/styles/styles.scss
+++ b/agence-immo/styles/styles.scss
@@ -3,7 +3,9 @@ html {
       scroll-behavior: smooth;
       padding: 0;
       margin: 0;
-      font-family: 'Roboto', sans-serif;
+    
+     
+     
     }
     
     body {
@@ -11,6 +13,9 @@ html {
       padding: 0;
       margin: 0;
       font-family: 'Roboto', sans-serif;
+      font-weight: 300;
+      
+      
     }
 
 
@@ -53,6 +58,7 @@ header {
         
         margin: 0;
         padding: 0;
+        font-weight: 400;
     }
    
 }
@@ -71,6 +77,7 @@ header {
     h2{
         margin: 0;
         padding: 0;
+        font-weight: 400;
     }
     
 }
