--- a/agence-immo/styles/styles.css
+++ b/agence-immo/styles/styles.css
@@ -10,7 +10,6 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Roboto', sans-serif;
-  font-weight: 300;
 }
 
 header {
@@ -51,12 +50,15 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 .first-hed h1 {
   margin: 0;
   padding: 0;
   font-weight: 400;
+  padding-bottom: 0;
 }
 
 .second-hed {
@@ -74,6 +76,7 @@ header {
       -ms-flex-align: center;
           align-items: center;
   font-size: 1.5rem;
+  margin-top: -0.7rem;
 }
 
 .second-hed h2 {
@@ -84,7 +87,48 @@ header {
 
 .third-hed {
   width: 100%;
-  min-height: 50px;
-  background-color: hotpink;
+  height: 40px;
+  min-height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 40px;
+}
+
+.hrefs-hed {
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 1rem;
+  width: 12.5%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-left: 1px solid #bbb8b8;
+  border-right: 1px solid #bbb8b8;
+  color: #0ea2cc;
+}
+
+.hrefs-hed:hover {
+  color: white;
+  cursor: pointer;
+  background-color: #8fd1e4;
+  border-left: 1px solid #0ea2cc;
+  border-right: 1px solid #0ea2cc;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
 }
 /*# sourceMappingURL=styles.css.map */
