--- a/agence-immo/styles/styles.scss
+++ b/agence-immo/styles/styles.scss
@@ -13,7 +13,7 @@ html {
       padding: 0;
       margin: 0;
       font-family: 'Roboto', sans-serif;
-      font-weight: 300;
+     
       
       
     }
@@ -54,11 +54,14 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 0;
+    padding-bottom: 0;
     h1{
         
         margin: 0;
         padding: 0;
         font-weight: 400;
+        padding-bottom: 0;
     }
    
 }
@@ -73,6 +76,7 @@ header {
     justify-content: center;
     align-items: center;
     font-size: 1.5rem;
+    margin-top: -0.7rem;
 
     h2{
         margin: 0;
@@ -84,7 +88,35 @@ header {
 
 .third-hed{
     width: 100%;
-    min-height: 50px;
-    background-color: hotpink;
+    height: 40px;
+    min-height: 40px;
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   margin-top: 40px;
    
+}
+
+.hrefs-hed{
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 1rem;
+    width: 12.5%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-left: 1px solid #bbb8b8;
+    border-right: 1px solid #bbb8b8;
+    
+    color: #0ea2cc ;
+}
+.hrefs-hed:hover{
+    color: white;
+    cursor: pointer;
+    background-color: #8fd1e4 ;
+    border-left: 1px solid #0ea2cc;
+    border-right: 1px solid #0ea2cc;
+    transition-duration: 0.3s;
+    
 }
