--- a/agence-immo/styles/styles.css
+++ b/agence-immo/styles/styles.css
@@ -100,6 +100,7 @@ header {
       -ms-flex-pack: center;
           justify-content: center;
   margin-top: 40px;
+  border-bottom: 1px solid #bbb8b8;
 }
 
 .hrefs-hed {
@@ -130,5 +131,145 @@ header {
   border-right: 1px solid #0ea2cc;
   -webkit-transition-duration: 0.3s;
           transition-duration: 0.3s;
+}
+
+article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  /* background-color: green; */
+  width: 960px;
+  height: 1100px;
+  margin: 0 auto;
+}
+
+article .open-doors {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+article .open-doors .open-doors-intro {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 38%;
+  height: 350px;
+  /* background-color: greenyellow; */
+  margin-right: 2%;
+}
+
+article .open-doors .open-doors-intro p {
+  display: block;
+  color: #bbb8b8;
+  font-size: 2.3rem;
+  font-weight: 600;
+  text-align: center;
+  border-top: 1px solid #bbb8b8;
+  border-bottom: 1px solid #bbb8b8;
+  padding: 1.8rem;
+}
+
+article .open-doors .open-doors-image {
+  width: 60%;
+  height: 350px;
+  /* background-color: grey; */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+article .open-doors .open-doors-image img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+article .large-choise {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: block;
+  width: 100%;
+  height: 80px;
+  /* background-color: indigo; */
+  font-size: 2.3rem;
+  font-weight: 600;
+  text-align: center;
+  border-top: 1px solid #bbb8b8;
+  border-bottom: 1px solid #bbb8b8;
+}
+
+article .pub {
+  height: 700px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3 1fr);
+  -ms-grid-rows: (1fr)[5];
+      grid-template-rows: repeat(5 1fr);
+      grid-template-areas: "f s t" "f s t" "f s t" "v v t" "v v t";
+}
+
+article .pub .pub-first {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 1;
+  grid-area: f;
+  background-color: brown;
+}
+
+article .pub .pub-second {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 2;
+  grid-area: s;
+  background-color: hotpink;
+}
+
+article .pub .pub-third {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 5;
+  -ms-grid-column: 3;
+  grid-area: t;
+  background-color: lightblue;
+}
+
+article .pub .pub-fourth {
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: v;
+  background-color: burlywood;
+}
+
+footer {
+  width: 100%;
+  height: 150px;
+  background-color: grey;
 }
 /*# sourceMappingURL=styles.css.map */
