--- a/agence-immo/styles/styles.scss
+++ b/agence-immo/styles/styles.scss
@@ -94,6 +94,7 @@ header {
    flex-direction: row;
    justify-content: center;
    margin-top: 40px;
+   border-bottom: 1px solid #bbb8b8;
    
 }
 
@@ -120,3 +121,140 @@ header {
     transition-duration: 0.3s;
     
 }
+
+article{
+    display: flex;
+    flex-direction: column;
+    /* background-color: green; */
+    width: 960px;
+    height: 1100px;
+    margin: 0 auto;
+
+
+    .open-doors{
+        display: flex;
+        flex-direction: row;
+            .open-doors-intro{
+                display: flex;
+                flex-direction: column;
+                width: 38%;
+                height:350px;
+                /* background-color: greenyellow; */
+                margin-right: 2%;
+                p{
+                    display: block;
+                    color: #bbb8b8;
+                    font-size: 2.3rem;
+                    font-weight: 600;
+                    text-align: center;
+                    border-top: 1px solid #bbb8b8;
+                    border-bottom: 1px solid #bbb8b8 ;
+                    padding: 1.8rem;
+                }
+               
+            }
+            .open-doors-image{
+                width: 60%;
+                height: 350px;
+                /* background-color: grey; */
+                display: flex;
+                justify-content: flex-end;
+                img{
+                    display: block;
+                    max-width: 100%;
+                    max-height: 100%;
+                }
+            }
+    
+    }
+
+
+
+    .large-choise{
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        display: block;
+        width: 100%;
+        height: 80px;
+        
+        /* background-color: indigo; */
+        font-size: 2.3rem;
+                    font-weight: 600;
+                    text-align: center;
+        border-top: 1px solid #bbb8b8;
+        border-bottom: 1px solid #bbb8b8;
+       
+    }
+
+
+
+
+
+    .pub{
+        height: 700px;
+        display: grid;
+        grid-template-columns: repeat(3 1fr);
+  grid-template-rows: repeat(5 1fr);
+  grid-template-areas:
+    "f s t"
+    "f s t"
+    "f s t"
+    "v v t"
+    "v v t"
+  ;
+
+  .pub-first{
+      grid-area: f;
+      background-color: brown;
+      
+
+  }
+ .pub-second{
+    grid-area: s;
+    background-color: hotpink;
+    
+      
+  }
+  .pub-third{
+    grid-area: t;
+    background-color: lightblue;
+   
+      
+}
+.pub-fourth{
+    grid-area: v;
+    background-color: burlywood;
+  
+      
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    }
+
+
+}
+
+footer{
+    width: 100%;
+    height: 150px;
+    background-color: grey;
+}
+
