--- a/agence-immo/styles/styles.scss
+++ b/agence-immo/styles/styles.scss
@@ -1,3 +1,9 @@
+
+$gray: #969696;
+$gray-white: #bbb8b8;
+
+
+
 html {
     max-width: 100%;
       scroll-behavior: smooth;
@@ -94,11 +100,14 @@ header {
    flex-direction: row;
    justify-content: center;
    margin-top: 40px;
-   border-bottom: 1px solid #bbb8b8;
-   
-}
+   border-bottom: 1px solid $gray-white;
 
-.hrefs-hed{
+    .hrefs-hed:nth-child(1){
+        border-left: none;
+    }
+
+
+   .hrefs-hed{
     text-transform: uppercase;
     font-weight: 300;
     font-size: 1rem;
@@ -107,8 +116,8 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-left: 1px solid #bbb8b8;
-    border-right: 1px solid #bbb8b8;
+    border-left: 1px solid $gray-white;
+    // border-right: 1px solid $gray-white;
     
     color: #0ea2cc ;
 }
@@ -117,10 +126,19 @@ header {
     cursor: pointer;
     background-color: #8fd1e4 ;
     border-left: 1px solid #0ea2cc;
-    border-right: 1px solid #0ea2cc;
+    // border-right: 1px solid #0ea2cc;
     transition-duration: 0.3s;
     
 }
+
+.hrefs-hed:hover:nth-child(1){
+    border-left: none;
+}
+}
+
+
+
+
 
 article{
     display: flex;
@@ -143,13 +161,19 @@ article{
                 margin-right: 2%;
                 p{
                     display: block;
-                    color: #bbb8b8;
+                    color: $gray;
                     font-size: 2.3rem;
                     font-weight: 600;
                     text-align: center;
-                    border-top: 1px solid #bbb8b8;
-                    border-bottom: 1px solid #bbb8b8 ;
-                    padding: 1.8rem;
+                    border-top: 1px solid $gray;
+                    border-bottom: 1px solid $gray ;
+                    padding: 1.7rem;
+                   
+                }
+                img{
+                   vertical-align: top;
+                   overflow: hidden;
+                   
                 }
                
             }
@@ -175,7 +199,6 @@ article{
         justify-content: center;
         align-content: center;
         align-items: center;
-        display: block;
         width: 100%;
         height: 80px;
         
@@ -183,8 +206,9 @@ article{
         font-size: 2.3rem;
                     font-weight: 600;
                     text-align: center;
-        border-top: 1px solid #bbb8b8;
-        border-bottom: 1px solid #bbb8b8;
+                    color: $gray;
+        border-top: 1px solid $gray;
+        border-bottom: 1px solid $gray;
        
     }
 
