--- a/agence-immo/styles/styles.css
+++ b/agence-immo/styles/styles.css
@@ -1,12 +1,10 @@
 html {
-  max-width: 100%;
   scroll-behavior: smooth;
   padding: 0;
   margin: 0;
 }
 
 body {
-  max-width: 100%;
   padding: 0;
   margin: 0;
   font-family: 'Roboto', sans-serif;
@@ -149,7 +147,7 @@ article {
           flex-direction: column;
   /* background-color: green; */
   width: 960px;
-  height: 1100px;
+  height: auto;
   margin: 0 auto;
 }
 
@@ -235,7 +233,7 @@ article .large-choise {
 }
 
 article .pub {
-  height: 700px;
+  height: 800px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[3];
@@ -280,7 +278,35 @@ article .pub .pub-fourth {
 
 footer {
   width: 100%;
-  height: 150px;
-  background-color: grey;
+  height: 100px;
+  background-color: #bbb8b8;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+footer .href-git {
+  justify-self: flex-start;
+  color: white;
+  font-size: 0.8rem;
+}
+
+footer .href-git a {
+  color: white;
+}
+
+footer .links {
+  justify-self: flex-end;
+  font-size: 2rem;
+}
+
+footer .links a {
+  color: white;
 }
 /*# sourceMappingURL=styles.css.map */
