--- a/agence-immo/styles/styles.scss
+++ b/agence-immo/styles/styles.scss
@@ -5,7 +5,7 @@ $gray-white: #bbb8b8;
 
 
 html {
-    max-width: 100%;
+    
       scroll-behavior: smooth;
       padding: 0;
       margin: 0;
@@ -15,7 +15,7 @@ html {
     }
     
     body {
-      max-width: 100%;
+      
       padding: 0;
       margin: 0;
       font-family: 'Roboto', sans-serif;
@@ -145,7 +145,7 @@ article{
     flex-direction: column;
     /* background-color: green; */
     width: 960px;
-    height: 1100px;
+    height: auto;
     margin: 0 auto;
 
 
@@ -217,7 +217,7 @@ article{
 
 
     .pub{
-        height: 700px;
+        height: 800px;
         display: grid;
         grid-template-columns: repeat(3 1fr);
   grid-template-rows: repeat(5 1fr);
@@ -257,28 +257,41 @@ article{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     }
 
 
 }
 
+
 footer{
     width: 100%;
-    height: 150px;
-    background-color: grey;
+    height: 100px;
+    background-color: $gray-white;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    .href-git{
+        justify-self: flex-start;
+        color: white;
+        font-size: 0.8rem;
+        a{
+            color: white;
+            
+        }
+    }
+    .links{
+        justify-self: flex-end;
+        font-size: 2rem;
+        a{
+            color: white;
+        }
+
+    }
+    
+    
 }
+
+
 
