--- a/agence-immo/styles/styles.scss
+++ b/agence-immo/styles/styles.scss
@@ -1,30 +1,92 @@
 @keyframes slide {
-    20% {margin-left: 0px;}
-    30% {margin-left: -306px;}
-    50% {margin-left: -306px;}
-    60% {margin-left: -612px;}
-    70% {margin-left: -612px;}
-    80% {margin-left: -918px;}
-    90% {margin-left: -918px;}
-  }
-  @keyframes slideFour {
-    20% {margin-left: 0px;}
-    30% {margin-left: -632px;}
-    50% {margin-left: -632px;}
-    60% {margin-left: -1264px;}
-    70% {margin-left: -1264px;}
-    80% {margin-left: -1896px;}
-    90% {margin-left: -1896px;}
-  }
-  @keyframes slideIntro {
-    20% {margin-top: 0px;}
-    30% {margin-top: -245px;}
-    50% {margin-top: -245px;}
-    60% {margin-top: -490px;}
-    70% {margin-top: -490px;}
-    80% {margin-top: -735px;}
-    90% {margin-top: -735px;}
-  }
+    20% {
+        margin-left: 0px;
+    }
+
+    30% {
+        margin-left: -306px;
+    }
+
+    50% {
+        margin-left: -306px;
+    }
+
+    60% {
+        margin-left: -612px;
+    }
+
+    70% {
+        margin-left: -612px;
+    }
+
+    80% {
+        margin-left: -918px;
+    }
+
+    90% {
+        margin-left: -918px;
+    }
+}
+
+@keyframes slideFour {
+    20% {
+        margin-left: 0px;
+    }
+
+    30% {
+        margin-left: -632px;
+    }
+
+    50% {
+        margin-left: -632px;
+    }
+
+    60% {
+        margin-left: -1264px;
+    }
+
+    70% {
+        margin-left: -1264px;
+    }
+
+    80% {
+        margin-left: -1896px;
+    }
+
+    90% {
+        margin-left: -1896px;
+    }
+}
+
+@keyframes slideIntro {
+    20% {
+        margin-top: 0px;
+    }
+
+    30% {
+        margin-top: -245px;
+    }
+
+    50% {
+        margin-top: -245px;
+    }
+
+    60% {
+        margin-top: -490px;
+    }
+
+    70% {
+        margin-top: -490px;
+    }
+
+    80% {
+        margin-top: -735px;
+    }
+
+    90% {
+        margin-top: -735px;
+    }
+}
 
 
 
@@ -35,56 +97,56 @@ $gray-white: #bbb8b8;
 
 
 html {
-    
-      scroll-behavior: smooth;
-      padding: 0;
-      margin: 0;
-    
-     
-     
-    }
-    
-    body {
-      
-      padding: 0;
-      margin: 0;
-      font-family: 'Roboto', sans-serif;
-     
-      
-      
-    }
+
+    scroll-behavior: smooth;
+    padding: 0;
+    margin: 0;
+
+
+
+}
+
+body {
+
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+
+
+
+}
 
 
 
 header {
     width: 100%;
     min-height: 400px;
-    
+
     display: flex;
     flex-direction: column;
 }
 
-.image-hed{
+.image-hed {
     width: 100%;
     min-height: 200px;
-   
-    
 
 
-    img{
+
+
+    img {
         width: 40%;
         max-height: 200px;
         display: block;
         margin: 0 auto;
-        
-    
+
+
     }
 }
 
-.first-hed{
+.first-hed {
     width: 100%;
     min-height: 100px;
-   
+
     color: #0ea2cc;
     font-size: 2rem;
     display: flex;
@@ -92,21 +154,22 @@ header {
     align-items: center;
     margin-bottom: 0;
     padding-bottom: 0;
-    h1{
-        
+
+    h1 {
+
         margin: 0;
         padding: 0;
         font-weight: 400;
         padding-bottom: 0;
     }
-   
+
 }
 
-.second-hed{
+.second-hed {
     width: 100%;
     min-height: 50px;
     color: #646464;
-    
+
     text-align: center;
     display: flex;
     justify-content: center;
@@ -114,63 +177,64 @@ header {
     font-size: 1.5rem;
     margin-top: -0.7rem;
 
-    h2{
+    h2 {
         margin: 0;
         padding: 0;
         font-weight: 400;
     }
-    
+
 }
 
-.third-hed{
+.third-hed {
     width: 100%;
     height: 40px;
     min-height: 40px;
-   display: flex;
-   flex-direction: row;
-   justify-content: center;
-   margin-top: 40px;
-   border-bottom: 1px solid $gray-white;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 40px;
+    border-bottom: 1px solid $gray-white;
 
-    .hrefs-hed:nth-child(1){
+    .hrefs-hed:nth-child(1) {
         border-left: none;
     }
 
 
-   .hrefs-hed{
-    text-transform: uppercase;
-    font-weight: 300;
-    font-size: 1rem;
-    width: 12.5%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-left: 1px solid $gray-white;
-    // border-right: 1px solid $gray-white;
-    
-    color: #0ea2cc ;
+    .hrefs-hed {
+        text-transform: uppercase;
+        font-weight: 300;
+        font-size: 1rem;
+        width: 12.5%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-left: 1px solid $gray-white;
+        // border-right: 1px solid $gray-white;
+
+        color: #0ea2cc;
+    }
+
+    .hrefs-hed:hover {
+        color: white;
+        cursor: pointer;
+        background-color: #8fd1e4;
+        border-left: 1px solid #0ea2cc;
+        // border-right: 1px solid #0ea2cc;
+        transition-duration: 0.3s;
+
+    }
+
+    .hrefs-hed:hover:nth-child(1) {
+        border-left: none;
+    }
 }
-.hrefs-hed:hover{
-    color: white;
-    cursor: pointer;
-    background-color: #8fd1e4 ;
-    border-left: 1px solid #0ea2cc;
-    // border-right: 1px solid #0ea2cc;
-    transition-duration: 0.3s;
-    
-}
-
-.hrefs-hed:hover:nth-child(1){
-    border-left: none;
-}
-}
 
 
 
 
 
-article{
+article {
     display: flex;
     flex-direction: column;
     /* background-color: green; */
@@ -179,223 +243,316 @@ article{
     margin: 0 auto;
 
 
-    .open-doors{
+    .open-doors {
         display: flex;
         flex-direction: row;
-            .open-doors-intro{
-                display: flex;
-                flex-direction: column;
-                width: 38%;
-                height:350px;
-                /* background-color: greenyellow; */
-                margin-right: 2%;
-                overflow: hidden;
-                
-                
-                .open-doors-intro-p{
-                    height: 105px;
-                    width: 100%;
-                    background-color: white;
-                    z-index: 2;
-                    p{
-                        display: block;
-                        color: $gray;
-                        font-size: 2.3rem;
-                        font-weight: 600;
-                        text-align: center;
-                        border-top: 1px solid $gray;
-                        border-bottom: 1px solid $gray ;
-                        padding: 1.7rem;
-                        background-color: white;
-                        
-                        z-index: 2;
-                       
-                    }
-                }
-                
-               
 
-                .open-doors-intro-wrapper{
-                   
-                    height: 1400px;
-                    width: 100%;
-                    animation: slideIntro 10s ease infinite;
-                    z-index: 1;
+        .open-doors-intro {
+            display: flex;
+            flex-direction: column;
+            width: 38%;
+            height: 350px;
+            /* background-color: greenyellow; */
+            margin-right: 2%;
+            overflow: hidden;
 
 
+            .open-doors-intro-p {
+                height: 105px;
+                width: 100%;
+                background-color: white;
+                z-index: 2;
 
-
-                    img{
-                        
-                        width: 100%;
-                        height: 245px;
-                        
-                     }
-
-                }
-
-               
-               
-            }
-            .open-doors-image{
-                width: 60%;
-                height: 350px;
-                /* background-color: grey; */
-                display: flex;
-                justify-content: flex-end;
-                img{
+                p {
                     display: block;
-                    max-width: 100%;
-                    max-height: 100%;
+                    color: $gray;
+                    font-size: 2.3rem;
+                    font-weight: 600;
+                    text-align: center;
+                    border-top: 1px solid $gray;
+                    border-bottom: 1px solid $gray;
+                    padding: 1.7rem;
+                    background-color: white;
+
+                    z-index: 2;
+
                 }
             }
-    
+
+
+
+            .open-doors-intro-wrapper {
+
+                height: 1400px;
+                width: 100%;
+                animation: slideIntro 10s ease infinite;
+                z-index: 1;
+
+
+
+
+                img {
+
+                    width: 100%;
+                    height: 245px;
+
+                }
+
+            }
+
+
+
+        }
+
+        .open-doors-image {
+            width: 60%;
+            height: 350px;
+            /* background-color: grey; */
+            display: flex;
+            justify-content: flex-end;
+
+            img {
+                display: block;
+                max-width: 100%;
+                max-height: 100%;
+            }
+        }
+
     }
 
 
 
-    .large-choise{
+    .large-choise {
         display: flex;
         justify-content: center;
         align-content: center;
         align-items: center;
         width: 100%;
         height: 80px;
-        
+
         /* background-color: indigo; */
         font-size: 2.3rem;
-                    font-weight: 600;
-                    text-align: center;
-                    color: $gray;
+        font-weight: 600;
+        text-align: center;
+        color: $gray;
         border-top: 1px solid $gray;
         border-bottom: 1px solid $gray;
-       
+
     }
 
 
 
 
 
-    .pub{
+    .pub {
         height: 700px;
         display: grid;
         grid-template-columns: repeat(3 1fr);
-  grid-template-rows: repeat(5 1fr);
-  grid-template-areas:
-    "f s t"
-    "f s t"
-    "f s t"
-    "v v t"
-    "v v t"
-  ;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-  margin-bottom: 50px;
-  
-  h3{
-      margin: 0.3rem;
-      margin-left: 0;
-  }
+        grid-template-rows: repeat(5 1fr);
+        grid-template-areas:
+            "f s t"
+            "f s t"
+            "f s t"
+            "v v t"
+            "v v t"
+        ;
+        grid-column-gap: 20px;
+        grid-row-gap: 20px;
+        margin-bottom: 50px;
 
-  .pub-first{
-      grid-area: f;
-      //!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!//
-      width: 306px;
-      height: 400px;
-      overflow: hidden;
+        h3 {
+            margin: 0.3rem;
+            margin-left: 0;
+        }
 
-        .first-first{
-            width: 1224px;
-            height: 50%; 
-            animation: slide 20s ease infinite;
+        .pub-first {
+            grid-area: f;
+            width: 306px;
+            height: 400px;
+            overflow: hidden;
             
-            
-            
-            img{
-                float: left;
-                height: 200px;
+            .first-intro{
+                
+                background-color: RGBA(14,162,204,0.3);
                 width: 306px;
+                height: 50px;
+                position: absolute; //!!!!!!!!!!!!!//
+                margin-top: 150px;
+               
+
+                a{
+                    cursor: pointer;
+                    text-decoration: none;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    color: white;
+                    height: 100%;
+                    font-size: 1.5rem;
+                    margin: 0;
+                    padding: 0;
+                   
+                }
+                a:hover{
+                    color: yellowgreen;
+                }
+                
             }
-    
-           
+
+            .first-first {
+                width: 1224px;
+                height: 200px;
+                animation: slide 20s ease infinite;
+                
+
+
+
+                img {
+                    float: left;
+                    height: 200px;
+                    width: 306px;
+                }
+
+
+            }
+
+            .first-second {
+                max-width: 100%;
+                height: 50%;
+                color: $gray;
+            }
+
+
+
         }
-    
-        .first-second{
-            max-width: 100%;
-            height: 50%;
-            color: $gray;
+
+        .pub-second {
+            grid-area: s;
+
+            width: 306px;
+            height: 400px;
+
+            .second-intro{
+                background-color:RGBA(150,150,150,0.7) ;
+                width: 306px;
+                height: 50px;
+                position: absolute;
+                margin-top: 150px;
+              
+              
+                a{
+                    cursor: pointer;
+                    text-decoration: none;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    color: white;
+                    height: 100%;
+                    font-size: 1.5rem;
+                    margin: 0;
+                    padding: 0;
+                   
+                }
+                a:hover{
+                    color: yellowgreen;
+                }
+            }
+
+
+            .second-first {
+                max-width: 100%;
+                height: 50%;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+
+            }
+
+            .second-second {
+                max-width: 100%;
+                height: 50%;
+                color: $gray;
+
+            }
+
+
         }
 
-      
+        .pub-third {
+            grid-area: t;
 
-  }
- .pub-second{
-    grid-area: s;
-   
-    width: 306px;
-    height: 400px;
-    
-    .second-first{
-        max-width: 100%;
-        height: 50%;
-        img{
-            width: 100%;
-            height: 100%;
+            width: 306px;
+
+            .third-first {
+                width: 100%;
+                height: 70%;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+
+            .third-second {
+                width: 100%;
+                height: 30%;
+                color: $gray;
+            }
+
+
         }
-       
-    }
 
-    .second-second{
-         max-width: 100%;
-        height: 50%;
-        color: $gray;
-
-    }
-    
-      
-  }
-  .pub-third{
-    grid-area: t;
-    
-    width: 306px;
-    .third-first{
-        width: 100%;
-        height: 70%;
-        
-        img{
-            width: 100%;
-            height: 100%;
-        }
-    }
-    .third-second{
-        width: 100%;
-        height: 30%;
-        color: $gray;
-    }
-   
-      
-}
-.pub-fourth{
-    grid-area: v;
-    width: 632px;
-    height: 280px;
-    overflow: hidden;
-
-    .fourth-first{
-        width: 2528px;
-        height: 100%;
-        animation: slideFour 10s ease infinite;
-
-
-        img{
-            float: left;
+        .pub-fourth {
+            grid-area: v;
             width: 632px;
-            height: 100%;
+            height: 280px;
+            overflow: hidden;
+
+            .fourth-intro{
+                background-color:RGBA(150,150,150,0.7) ;
+                
+                width: 300px;
+                height: 80px;
+                position: absolute;
+                margin-top: 50px;
+
+
+                a{
+                    cursor: pointer;
+                    text-decoration: none;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    color: white;
+                    height: 100%;
+                    font-size: 1.5rem;
+                    margin: 0;
+                    margin-left: 20px;
+                    padding: 0;
+                   
+                }
+                a:hover{
+                    color: yellowgreen;
+                }
+
+            }
+            .fourth-first {
+                width: 2528px;
+                height: 100%;
+                animation: slideFour 10s ease infinite;
+
+
+                img {
+                    float: left;
+                    width: 632px;
+                    height: 100%;
+                }
+            }
+
+
         }
-    }
- 
-      
-}
 
 
 
@@ -406,7 +563,7 @@ article{
 }
 
 
-footer{
+footer {
     width: 100%;
     height: 100px;
     background-color: $gray-white;
@@ -415,26 +572,30 @@ footer{
     align-items: center;
     justify-content: space-around;
 
-    .href-git{
+    .href-git {
         justify-self: flex-start;
         color: white;
         font-size: 0.8rem;
-        a{
+
+        a {
+            color: white;
+
+        }
+    }
+
+    .links {
+        justify-self: flex-end;
+        font-size: 2rem;
+
+        a {
             color: white;
             
         }
-    }
-    .links{
-        justify-self: flex-end;
-        font-size: 2rem;
-        a{
-            color: white;
+        a:hover{
+            color:#0ea2cc ;
         }
 
     }
-    
-    
+
+
 }
-
-
-
